style(home): avoid horizontal scroll on mobile devices (#51)
The content overflows horizontally on mobile devices due to fixed images width. This is fixed using a max-width. Also the font-size tends to be too big so it is reduced for small viewports

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ html {
   min-height: 100%;
   position: relative;
   font-family: 'Roboto', sans-serif;
-  min-width: 390px;
+  min-width: 320px;
 }
 
 .bg-pattern {
